--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-leaflet/core": "^3.0.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-native-maps": "^1.22.1",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
